<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_leave_log_id"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="id" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_request_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/daterequest" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_from_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/datefrom" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_to_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dateto" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/resttype" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_status"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:gravity="center"
        android:text="@string/leavestatus" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_user_approve"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/userapprove" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_leave_log_approve"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1.15"
        android:background="@drawable/bg_btn_approve"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/approve"
        android:textColor="@android:color/white" />

</LinearLayout>