<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.luan.dms_management.activities.LeaveLogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/btnCheckin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="ID"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/daterequest"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/datefrom"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dateto"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/resttype"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center"
            android:text="@string/leavestatus"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/userapprove"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.15"
            android:gravity="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_leave_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@android:color/transparent" />

</LinearLayout>
