<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="#"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_check_in_time"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/checkin_time"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_check_out_time"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/checkout_time"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_number"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_pics"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pics_number"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
