<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/btnInventory"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="#"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/checkin_time"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/checkout_time"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_number"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pics_number"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
