<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/bgappname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update_note_dialog_title"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_dialog_close_dark"
            android:background="@android:color/transparent"
            />

    </LinearLayout>

    <Spinner
        android:id="@+id/spn_note_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/et_note_content"
        android:layout_width="match_parent"
        android:hint="@string/update_note_dialog_content_hint"
        android:layout_height="100dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/sync"
            android:text="@string/button_clear"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/btnCheckin"
            android:text="@string/button_ok"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>

</LinearLayout>